# tf-rmm

./: build.sh
app/device_assignment/el0_app/: CMakeLists.txt
configs/: qemu_virt_defcfg.cmake
docs/: readme.rst
lib/: CMakeLists.txt
lib/addr_list/include/: addr_list.h
lib/addr_list/src/: addr_list.c
lib/arch/include/: arch.h
lib/glob_data/: CMakeLists.txt
lib/glob_data/src/: glob_data.c
lib/mec/src/: mec.c
lib/rmm_el3_ifc/include/: rmm_el3_ifc.h
lib/rmm_el3_ifc/src/: rmm_el3_ifc.c  rmm_el3_runtime.c
lib/runtime_ctrl/: CMakeLists.txt
lib/runtime_ctrl/include/: runtime_ctrl.h
lib/runtime_ctrl/src/: runtime_ctrl.c
lib/s2tt/include/: s2tt.h
lib/s2tt/src/: s2tt.c
lib/s2tt/tests/: s2tt_test_helpers.c
lib/smc/include/: smc-rmi.h  smc.h
lib/smc/src/: smc-offsets.c  smc-rmi-offsets.c
lib/sro_context/: CMakeLists.txt
lib/sro_context/include/: sro_context.h
lib/sro_context/src/: sro_context.c
plat/arm/src/: arm_setup.c
plat/common/include/: plat_compat_mem.h
plat/common/src/: plat_common_init.c
runtime/: CMakeLists.txt
runtime/core/: exit.c  handler.c  init.c  sysregs.c
runtime/core/aarch64/: head.S
runtime/include/: realm.h  rec.h  smc-handler.h
runtime/rmi/: feature.c  realm.c  rec.c  rtt.c  run.c  sro.c
runtime/rsi/: realm_ipa_helper.c
toolchains/: common.cmake
tools/cbmc/: CheckCBMC.cmake
tools/cbmc/testbenches/: tb_rmi_features.c  tb_rmi_granule_delegate.c  tb_rmi_granule_delegate.h  tb_rmi_granule_undelegate.c  tb_rmi_granule_undelegate.h
tools/shrinkwrap/configs/: cca.yaml  cca_da.yaml
(+7 files in other folders)
